--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "naumen-test-frontend",
+  "name": "wikipedia-search-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,16 +10,19 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "react-spinners": "^0.5.4",
     "typescript": "3.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "eject": "react-scripts eject",
+    "lint": "npm-run-all lint:*",
+    "lint:ts": "tslint --project .",
+    "lint:es": "eslint --ext=.ts src/",
+    "lint:css": "stylelint src/**/*.css",
+    "lint:deps": "npm audit"
   },
   "browserslist": {
     "production": [
@@ -32,5 +35,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^1.9.0",
+    "@typescript-eslint/parser": "^1.9.0",
+    "eslint": "^5.16.0",
+    "eslint-config-xo": "^0.26.0",
+    "npm-run-all": "^4.1.5",
+    "stylelint": "10.0.1",
+    "stylelint-config-standard": "^18.3.0",
+    "tslint": "5.16.0",
+    "tslint-react-recommended": "^1.0.15"
   }
 }
